// DBML cho dự án đặt vé xem phim (MongoDB NoSQL)
// Sử dụng để visualize cấu trúc dữ liệu
// Docs: https://dbml.dbdiagram.io/docs

Table nguoi_dung {
  MAKH varchar [primary key, note: 'Mã khách hàng, tự động tạo KH001...']
  HOTEN varchar
  EMAIL varchar [unique, not null]
  SDT varchar [unique]
  MATKHAU varchar [not null]
  NGAYDANGKY timestamp [default: `Date.now()`]
  VAITRO varchar [note: 'user/admin/manager']
  MARAP varchar [note: 'Mã rạp cho manager, tham chiếu đến rap_chieu.MARAP']
}

Table phim {
  MAPHIM varchar [primary key, note: 'Mã phim, tự động tạo PH0001...']
  TENPHIM varchar [not null]
  MOTA text
  THOILUONG integer [not null, note: 'Thời lượng phim (phút)']
  NGAYKHOICHIEU date [not null]
  THELOAI varchar[] [note: 'Mảng thể loại']
  DAODIEN varchar
  DANHSACHDV varchar[] [note: 'Mảng diễn viên']
  TRAILER varchar
  POSTER varchar
  HINHANH varchar[] [note: 'Mảng hình ảnh']
  DANHGIA float [default: 0, note: 'Điểm đánh giá trung bình']
  DANGCHIEU boolean [default: false]
  SAPCHIEU boolean [default: false]
  NGAYTAO timestamp [default: `Date.now()`]
  NGAYCAPNHAT timestamp [default: `Date.now()`]
}

Table rap_chieu {
  MARAP varchar [primary key, note: 'Mã rạp, tự động tạo R001...']
  TENRAP varchar [not null]
  DIACHI varchar [not null]
  TINHTHANH varchar [not null]
}

Table phong_chieu {
  MAPHONG varchar [primary key, note: 'Mã phòng, tự động tạo P001...']
  TENPHONG varchar [not null]
  MARAP varchar [not null, note: 'Tham chiếu đến rap_chieu.MARAP']
}

Table suat_chieu {
  MASUAT varchar [primary key, note: 'Mã suất, tự động tạo SC0001...']
  MAPHONG varchar [not null, note: 'Tham chiếu đến phong_chieu.MAPHONG']
  NGAYCHIEU date [not null]
  MAPHIM varchar [not null, note: 'Tham chiếu đến phim.MAPHIM']
  GIOBATDAU varchar [not null]
  GIOKETTHUC varchar [not null]
}

Table ghe {
  MAGHE varchar [primary key, note: 'Mã ghế, tự động tạo G0001...']
  MAPHONG varchar [not null, note: 'Tham chiếu đến phong_chieu.MAPHONG']
  HANG varchar [not null, note: 'Hàng ghế: A, B, ...']
  SO integer [not null, note: 'Số ghế: 1, 2, ...']
  LOAIGHE varchar [note: 'THUONG/VIP/DOI']
}

Table ve {
  MAVE varchar [primary key, note: 'Mã vé, tự động tạo dựa trên timestamp']
  MASUAT varchar [not null, note: 'Tham chiếu đến suat_chieu.MASUAT']
  MAKH varchar [not null, note: 'Tham chiếu đến nguoi_dung.MAKH']
  NGAYMUA timestamp [not null, default: `Date.now()`]
  GIAVE integer [not null]
}

Table chi_tiet_ghe {
  MAGHE varchar [not null, note: 'Tham chiếu đến ghe.MAGHE']
  MASUAT varchar [not null, note: 'Tham chiếu đến suat_chieu.MASUAT']
  MAVE varchar [note: 'Tham chiếu đến ve.MAVE, có thể null']
  TRANGTHAI varchar [note: 'TRONG/DADAT']

  indexes {
    (MAGHE, MASUAT) [unique]
  }
}

Table danh_gia {
  MADG varchar [primary key, note: 'Mã đánh giá, tự động tạo DG000001...']
  MAPHIM varchar [not null, note: 'Tham chiếu đến phim.MAPHIM']
  MAKH varchar [not null, note: 'Tham chiếu đến nguoi_dung.MAKH']
  SOSAO integer [not null, note: '1-5 sao']
  BINHLUAN text [default: '']
  NGAYDANHGIA timestamp [default: `Date.now()`]

  indexes {
    (MAPHIM, MAKH) [unique, note: '1 người chỉ đánh giá 1 lần/phim']
  }
}

Table chi_tiet_suat_chieu {
  MAPHIM varchar [not null, note: 'Tham chiếu đến phim.MAPHIM']
  MASUAT varchar [not null, note: 'Tham chiếu đến suat_chieu.MASUAT']
  GIOBATDAU timestamp [not null]
  GIOKETTHUC timestamp [not null]

  indexes {
    (MAPHIM, MASUAT, GIOBATDAU) [unique]
  }
}

// Mối quan hệ (Relationships)
Ref: nguoi_dung.MARAP > rap_chieu.MARAP // Manager quản lý rạp (1:1, optional)

Ref: rap_chieu.MARAP < phong_chieu.MARAP // 1 rạp có nhiều phòng (1:N)

Ref: phong_chieu.MAPHONG < ghe.MAPHONG // 1 phòng có nhiều ghế (1:N)

Ref: phong_chieu.MAPHONG < suat_chieu.MAPHONG // 1 phòng có nhiều suất (1:N)

Ref: phim.MAPHIM < suat_chieu.MAPHIM // 1 phim có nhiều suất (1:N)

Ref: suat_chieu.MASUAT < ve.MASUAT // 1 suất có nhiều vé (1:N)

Ref: nguoi_dung.MAKH < ve.MAKH // 1 người có nhiều vé (1:N)

Ref: nguoi_dung.MAKH < danh_gia.MAKH // 1 người có nhiều đánh giá (1:N)

Ref: phim.MAPHIM < danh_gia.MAPHIM // 1 phim có nhiều đánh giá (1:N)

Ref: ghe.MAGHE - chi_tiet_ghe.MAGHE // Ghế liên kết chi tiết ghế

Ref: suat_chieu.MASUAT - chi_tiet_ghe.MASUAT // Suất liên kết chi tiết ghế

Ref: ve.MAVE > chi_tiet_ghe.MAVE // Vé liên kết chi tiết ghế (optional)

Ref: phim.MAPHIM - chi_tiet_suat_chieu.MAPHIM // Phim liên kết chi tiết suất

Ref: suat_chieu.MASUAT - chi_tiet_suat_chieu.MASUAT // Suất liên kết chi tiết suất
